--- a/pages/mdd.html
+++ b/pages/mdd.html
@@ -49,13 +49,13 @@
         sabian hacer eran "himnos" para los fanes.
       </p>
       <section class="box-item">
-        <div class="box1">
+        <div>
           <img src="../fotosyvideos/A247.jpg" />
         </div>
-        <div class="box2">
+        <div>
           <img src="../fotosyvideos/YD.jpg" />
         </div>
-        <div class="box3"><img src="../fotosyvideos/mdd.jpg" /></div>
+        <div><img src="../fotosyvideos/mdd.jpg" /></div>
       </section>
     </main>
     <footer>
