--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
     />
   </head>
   <body class="fondo-principal">
-    <header class="nav">
-      <nav>
-        <a href="index.html">Inicio</a>
-        <a href="pages/discografia.html">Discografia</a>
+    <header>
+      <nav class="nav">
+        <ul>
+          <li><a href="index.html">Inicio</a></li>
 
-        <a href="pages/notas.html">Notas</a>
+          <li><a href="pages/discografia.html">Discografia</a></li>
 
-        <a href="pages/mdd.html">MDD</a>
+          <li><a href="pages/notas.html">Notas</a></li>
 
-        <a href="pages/nvt.html">NVT</a>
+          <li><a href="pages/mdd.html">MDD</a></li>
+
+          <li><a href="pages/nvt.html">NVT</a></li>
+        </ul>
       </nav>
     </header>
     <main>
@@ -50,21 +53,21 @@
               <img
                 src="fotosyvideos/rockstar.jpg"
                 class="d-block mx-auto"
-                alt="..."
+                alt="rockstar"
               />
             </div>
             <div class="carousel-item">
               <img
                 src="fotosyvideos/elegante.jpg"
                 class="d-block mx-auto"
-                alt="..."
+                alt="facha"
               />
             </div>
             <div class="carousel-item">
               <img
                 src="fotosyvideos/dye.jpg"
                 class="d-block mx-auto"
-                alt="..."
+                alt="pareja"
               />
             </div>
           </div>
