--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -13,16 +13,19 @@
     />
   </head>
   <body class="fondo-principal">
-    <header class="nav">
-      <nav>
-        <a href="../index.html">Inicio</a>
-        <a href="discografia.html">Discografia</a>
+    <header>
+      <nav class="nav">
+        <ul>
+          <li><a href="../index.html">Inicio</a></li>
 
-        <a href="notas.html">Notas</a>
+          <li><a href="discografia.html">Discografia</a></li>
 
-        <a href="mdd.html">MDD</a>
+          <li><a href="notas.html">Notas</a></li>
 
-        <a href="nvt.html">NVT</a>
+          <li><a href="mdd.html">MDD</a></li>
+
+          <li><a href="nvt.html">NVT</a></li>
+        </ul>
       </nav>
     </header>
     <main>
