--- a/pages/mdd.html
+++ b/pages/mdd.html
@@ -13,16 +13,19 @@
     />
   </head>
   <body class="fondo-principal">
-    <header class="nav">
-      <nav>
-        <a href="../index.html">Inicio</a>
+    <header>
+      <nav class="nav">
+        <ul>
+          <li><a href="../index.html">Inicio</a></li>
 
-        <a href="discografia.html">Discografia</a>
+          <li><a href="discografia.html">Discografia</a></li>
 
-        <a href="notas.html">Notas</a>
-        <a href="mdd.html">MDD</a>
+          <li><a href="notas.html">Notas</a></li>
 
-        <a href="nvt.html">NVT</a>
+          <li><a href="mdd.html">MDD</a></li>
+
+          <li><a href="nvt.html">NVT</a></li>
+        </ul>
       </nav>
     </header>
     <main>
@@ -49,13 +52,13 @@
         sabian hacer eran "himnos" para los fanes.
       </p>
       <section class="box-item">
-        <div>
+        <div class="box">
           <img src="../fotosyvideos/A247.jpg" />
         </div>
-        <div>
+        <div class="box">
           <img src="../fotosyvideos/YD.jpg" />
         </div>
-        <div><img src="../fotosyvideos/mdd.jpg" /></div>
+        <div class="box"><img src="../fotosyvideos/mdd.jpg" /></div>
       </section>
     </main>
     <footer>
