--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <article class="historia">
           Mauro Ezequiel Lombardo Quiroga o mejor conocido como "Duki" es un
           artista de trap argentino considerado como el mayor referente de este
-          genero en el pais. Su familia esta conformada por su madre Sanda
+          genero en el pais. Su familia esta conformada por su madre Sandra
           Quiroga Perez, su padre Guillermo Lombardo Ninaquispe y actualmente
-          esta en pareja con la cantante Emilia Mernes.Comenzó siendo un rapero
+          esta en pareja con la cantante Emilia Mernes. Comenzó siendo un rapero
           en las competencias de plaza pero su salto a la fama fue en la
           competencia conocida como "el quinto escalon", la cual fue organizada
           por Alejo Acosta o mas conocido como "Ysy A". .Esta competencia fue
