--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -61,7 +61,7 @@
           style="border-radius: 12px"
           src="https://open.spotify.com/embed/album/1SbMoaKFJWo8u1tb2dAgHt?utm_source=generator"
           width="50%"
-          height="152"
+          height="400px"
           frameborder="0"
           allowfullscreen=""
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
@@ -72,7 +72,7 @@
           style="border-radius: 12px"
           src="https://open.spotify.com/embed/album/4QefABr1DLTsrqSmuu2Bf8?utm_source=generator"
           width="50%"
-          height="152"
+          height="400px"
           frameborder="0"
           allowfullscreen=""
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
@@ -83,7 +83,7 @@
           style="border-radius: 12px"
           src="https://open.spotify.com/embed/album/3MKQjYpaES80tFP7Qo2zH0?utm_source=generator"
           width="50%"
-          height="152"
+          height="400px"
           frameborder="0"
           allowfullscreen=""
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
@@ -94,7 +94,7 @@
           style="border-radius: 12px"
           src="https://open.spotify.com/embed/album/48vGyeerQqM7mWU0JzRkAl?utm_source=generator"
           width="50%"
-          height="152"
+          height="400px"
           frameborder="0"
           allowfullscreen=""
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
@@ -105,7 +105,7 @@
           style="border-radius: 12px"
           src="https://open.spotify.com/embed/album/6anO6Uh11TivGpTI56aKCH?utm_source=generator"
           width="50%"
-          height="152"
+          height="400px"
           frameborder="0"
           allowfullscreen=""
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
@@ -116,7 +116,7 @@
           style="border-radius: 12px"
           src="https://open.spotify.com/embed/album/26nUVuonXEdbJTo9PeBYoR?utm_source=generator"
           width="50%"
-          height="152"
+          height="400px"
           frameborder="0"
           allowfullscreen=""
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
