--- a/pages/nvt.html
+++ b/pages/nvt.html
@@ -3,7 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mauro Ezequiel "Duki" Lombardo Quiroga</title>
+    <meta
+      name="keywords"
+      content="duki, musica. trap, genero urbano, rap, cantante, nvt, sencillo, cancion, primera cancion"
+    />
+    <!-- Primary Meta Tags -->
+    <title>"No vendo trap"</title>
+    <meta name="title" content=""No vendo trap"" /> <meta name="description"
+    content="El primer sencillo que logró sacar y fue furor en las redes en su
+    momento fue "No vendo trap"" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content=""No vendo trap"" /> <meta
+    property="og:description" content="El primer sencillo que logró sacar y fue
+    furor en las redes en su momento fue "No vendo trap"" />
+    <meta
+      property="og:image"
+      content="https://metatags.io/images/meta-tags.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content=""No vendo trap"" /> <meta
+    property="twitter:description" content="El primer sencillo que logró sacar y
+    fue furor en las redes en su momento fue "No vendo trap"" />
+    <meta
+      property="twitter:image"
+      content="https://metatags.io/images/meta-tags.png"
+    />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
