--- a/index.html
+++ b/index.html
@@ -3,7 +3,48 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta
+      name="keywords"
+      content="duki, musica. trap, genero urbano, rap, cantante"
+    />
+    <!-- Primary Meta Tags -->
     <title>Mauro Ezequiel "Duki" Lombardo Quiroga</title>
+    <meta name="title" content="Mauro Ezequiel "Duki" Lombardo Quiroga" />
+    <meta
+      name="description"
+      content="Esta pagina cuenta la trayectoria que tuvo Duki para llegar a donde esta hoy en dia. Contando sus inicios en las batallas de gallos para poder grabar su primer sencillo"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="Mauro Ezequiel "Duki" Lombardo Quiroga"
+    />
+    <meta
+      property="og:description"
+      content="Esta pagina cuenta la trayectoria que tuvo Duki para llegar a donde esta hoy en dia. Contando sus inicios en las batallas de gallos para poder grabar su primer sencillo"
+    />
+    <meta
+      property="og:image"
+      content="https://metatags.io/images/meta-tags.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="Mauro Ezequiel "Duki" Lombardo
+    Quiroga" />
+    <meta
+      property="twitter:description"
+      content="Esta pagina cuenta la trayectoria que tuvo Duki para llegar a donde esta hoy en dia. Contando sus inicios en las batallas de gallos para poder grabar su primer sencillo"
+    />
+    <meta
+      property="twitter:image"
+      content="https://metatags.io/images/meta-tags.png"
+    />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
