--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -3,7 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mauro Ezequiel "Duki" Lombardo Quiroga</title>
+    <meta
+      name="keywords"
+      content="duki, musica. trap, genero urbano, rap, cantante"
+    />
+    <!-- Primary Meta Tags -->
+    <title>Discografia</title>
+    <meta name="title" content="Discografia" />
+    <meta
+      name="description"
+      content="Los discos de Duki son arte y por eso me gustaria compartirlo con vos!"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="Discografia" />
+    <meta
+      property="og:description"
+      content="Los discos de Duki son arte y por eso me gustaria compartirlo con vos!"
+    />
+    <meta
+      property="og:image"
+      content="https://metatags.io/images/meta-tags.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="Discografia" />
+    <meta
+      property="twitter:description"
+      content="Los discos de Duki son arte y por eso me gustaria compartirlo con vos!"
+    />
+    <meta
+      property="twitter:image"
+      content="https://metatags.io/images/meta-tags.png"
+    />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
