--- a/pages/notas.html
+++ b/pages/notas.html
@@ -3,7 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mauro Ezequiel "Duki" Lombardo Quiroga</title>
+    <meta
+      name="keywords"
+      content="duki, musica. trap, genero urbano, rap, cantante, notas, entrevistas, charlas"
+    />
+    <!-- Primary Meta Tags -->
+    <title>Notas, Entrevistas, charlas...</title>
+    <meta name="title" content="Notas, Entrevistas, charlas..." />
+    <meta
+      name="description"
+      content="Duki a lolargo de su carrera dio varias notas y entrevistas que cuentan su historia y como es su vida actualmente"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="Notas, Entrevistas, charlas..." />
+    <meta
+      property="og:description"
+      content="Duki a lolargo de su carrera dio varias notas y entrevistas que cuentan su historia y como es su vida actualmente"
+    />
+    <meta
+      property="og:image"
+      content="https://metatags.io/images/meta-tags.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="Notas, Entrevistas, charlas..." />
+    <meta
+      property="twitter:description"
+      content="Duki a lolargo de su carrera dio varias notas y entrevistas que cuentan su historia y como es su vida actualmente"
+    />
+    <meta
+      property="twitter:image"
+      content="https://metatags.io/images/meta-tags.png"
+    />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
