--- a/pages/desarrollador.html
+++ b/pages/desarrollador.html
@@ -16,6 +16,6 @@
       Segundo Fernandez" estoy en 6° año y al terminar la secundaria me
       encantaria estudiar Ingenieria Informatica en la UTN.
     </p>
-    <img src="../fotosyvideos/yo.jpg " class="imgyo" />
+    <img src="../fotosyvideos/yo.jpg " class="imgyo" alt="yo" />
   </body>
 </html>
