--- a/pages/mdd.html
+++ b/pages/mdd.html
@@ -91,12 +91,14 @@
       </p>
       <section class="box-item">
         <div class="box">
-          <img src="../fotosyvideos/A247.jpg" />
+          <img src="../fotosyvideos/A247.jpg" alt="la Mansion" />
         </div>
         <div class="box">
-          <img src="../fotosyvideos/YD.jpg" />
+          <img src="../fotosyvideos/YD.jpg" alt="ysy a y Duki" />
         </div>
-        <div class="box"><img src="../fotosyvideos/mdd.jpg" /></div>
+        <div class="box">
+          <img src="../fotosyvideos/mdd.jpg" alt="modo diablo" />
+        </div>
       </section>
     </main>
     <footer>
