--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
       property="og:description"
       content="Esta pagina cuenta la trayectoria que tuvo Duki para llegar a donde esta hoy en dia. Contando sus inicios en las batallas de gallos para poder grabar su primer sencillo"
     />
-    <meta
-      property="og:image"
-      content="https://metatags.io/images/meta-tags.png"
-    />
+    <meta property="og:image" content="fotosyvideos/pistola.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -39,10 +36,7 @@
       property="twitter:description"
       content="Esta pagina cuenta la trayectoria que tuvo Duki para llegar a donde esta hoy en dia. Contando sus inicios en las batallas de gallos para poder grabar su primer sencillo"
     />
-    <meta
-      property="twitter:image"
-      content="https://metatags.io/images/meta-tags.png"
-    />
+    <meta property="twitter:image" content="fotosyvideos/pistola.jpg" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
     <link
