--- a/pages/notas.html
+++ b/pages/notas.html
@@ -23,10 +23,7 @@
       property="og:description"
       content="Duki a lolargo de su carrera dio varias notas y entrevistas que cuentan su historia y como es su vida actualmente"
     />
-    <meta
-      property="og:image"
-      content="https://metatags.io/images/meta-tags.png"
-    />
+    <meta property="og:image" content="../fotosyvideos/notes.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -36,10 +33,7 @@
       property="twitter:description"
       content="Duki a lolargo de su carrera dio varias notas y entrevistas que cuentan su historia y como es su vida actualmente"
     />
-    <meta
-      property="twitter:image"
-      content="https://metatags.io/images/meta-tags.png"
-    />
+    <meta property="twitter:image" content="../fotosyvideos/notes.jpg" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
     <link
