--- a/pages/nvt.html
+++ b/pages/nvt.html
@@ -19,10 +19,7 @@
     <meta property="og:title" content=""No vendo trap"" /> <meta
     property="og:description" content="El primer sencillo que logró sacar y fue
     furor en las redes en su momento fue "No vendo trap"" />
-    <meta
-      property="og:image"
-      content="https://metatags.io/images/meta-tags.png"
-    />
+    <meta property="og:image" content="../fotosyvideos/nvt.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
