--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -23,10 +23,7 @@
       property="og:description"
       content="Los discos de Duki son arte y por eso me gustaria compartirlo con vos!"
     />
-    <meta
-      property="og:image"
-      content="https://metatags.io/images/meta-tags.png"
-    />
+    <meta property="og:image" content="../fotosyvideos/duki1.webp" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -36,10 +33,7 @@
       property="twitter:description"
       content="Los discos de Duki son arte y por eso me gustaria compartirlo con vos!"
     />
-    <meta
-      property="twitter:image"
-      content="https://metatags.io/images/meta-tags.png"
-    />
+    <meta property="twitter:image" content="../fotosyvideos/duki1.webp" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
     <link
