--- a/pages/mdd.html
+++ b/pages/mdd.html
@@ -23,10 +23,7 @@
       property="og:description"
       content="Modo diablo es el grupo conformado por tres artistas: Duki, Ysy A y Neo Pistea creando asi al grupo más histórico de la escena del trap argentino"
     />
-    <meta
-      property="og:image"
-      content="https://metatags.io/images/meta-tags.png"
-    />
+    <meta property="og:image" content="../fotosyvideos/dyn.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -36,10 +33,7 @@
       property="twitter:description"
       content="Modo diablo es el grupo conformado por tres artistas: Duki, Ysy A y Neo Pistea creando asi al grupo más histórico de la escena del trap argentino"
     />
-    <meta
-      property="twitter:image"
-      content="https://metatags.io/images/meta-tags.png"
-    />
+    <meta property="twitter:image" content="../fotosyvideos/dyn.jpg" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
     <link
