--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://metatags.io/" />
-    <meta property="og:title" content="Mauro Ezequiel "Duki" Lombardo Quiroga"
+    <meta
+      property="og:title"
+      content="Mauro Ezequiel ´´Duki Lombardo´´ Quiroga"
     />
     <meta
       property="og:description"
@@ -30,8 +32,11 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://metatags.io/" />
-    <meta property="twitter:title" content="Mauro Ezequiel "Duki" Lombardo
-    Quiroga" />
+    <meta
+      property="twitter:title"
+      content="Mauro Ezequiel ´´Duki´´ Lombardo
+    Quiroga"
+    />
     <meta
       property="twitter:description"
       content="Esta pagina cuenta la trayectoria que tuvo Duki para llegar a donde esta hoy en dia. Contando sus inicios en las batallas de gallos para poder grabar su primer sencillo"
