--- a/pages/nvt.html
+++ b/pages/nvt.html
@@ -9,24 +9,30 @@
     />
     <!-- Primary Meta Tags -->
     <title>"No vendo trap"</title>
-    <meta name="title" content=""No vendo trap"" /> <meta name="description"
-    content="El primer sencillo que logró sacar y fue furor en las redes en su
-    momento fue "No vendo trap"" />
+    <meta name="title" content="No vendo trap" />
+    <meta name="description" content="El primer sencillo que logró sacar y fue
+    furor en las redes en su momento fue No vendo trap />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://metatags.io/" />
-    <meta property="og:title" content=""No vendo trap"" /> <meta
-    property="og:description" content="El primer sencillo que logró sacar y fue
-    furor en las redes en su momento fue "No vendo trap"" />
+    <meta property="og:title" content="No vendo trap" />
+    <meta
+      property="og:description"
+      content="El primer sencillo que logró sacar y fue
+    furor en las redes en su momento fue "
+      No
+      vendo
+      trap
+    />
     <meta property="og:image" content="../fotosyvideos/nvt.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://metatags.io/" />
-    <meta property="twitter:title" content=""No vendo trap"" /> <meta
-    property="twitter:description" content="El primer sencillo que logró sacar y
-    fue furor en las redes en su momento fue "No vendo trap"" />
+    <meta property="twitter:title" content="No vendo trap" />
+    <meta property="twitter:description" content="El primer sencillo que logró
+    sacar y fue furor en las redes en su momento fue No vendo trap />
     <meta
       property="twitter:image"
       content="https://metatags.io/images/meta-tags.png"
