--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -46,7 +46,44 @@
   </head>
   <body class="fondo-principal">
     <header>
-      <nav class="nav">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html">MAURO</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="discografia.html"
+                  >DISCOGRAFIA</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="notas.html">NOTAS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="mdd.html">MDD</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="nvt.html">NVT</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- <nav class="nav">
         <ul>
           <li><a href="../index.html">Inicio</a></li>
 
@@ -58,7 +95,7 @@
 
           <li><a href="nvt.html">NVT</a></li>
         </ul>
-      </nav>
+      </nav> -->
     </header>
     <main>
       <h1 class="title">Duki</h1>
@@ -87,68 +124,44 @@
         queriendo hacer las cosas correctamente y dandole un giro de 180° a su
         mentalidad y carrera.
       </p>
-      <section class="albumes">
+      <section class="posteo-media">
         <iframe
-          class="ssj"
-          style="border-radius: 12px"
           src="https://open.spotify.com/embed/album/1SbMoaKFJWo8u1tb2dAgHt?utm_source=generator"
-          width="70%"
-          height="355px"
           frameborder="0"
           allowfullscreen=""
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
           loading="lazy"
         ></iframe>
         <iframe
-          class="antezana"
-          style="border-radius: 12px"
           src="https://open.spotify.com/embed/album/4QefABr1DLTsrqSmuu2Bf8?utm_source=generator"
-          width="70%"
-          height="355px"
           frameborder="0"
           allowfullscreen=""
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
           loading="lazy"
         ></iframe>
         <iframe
-          class="defdm"
-          style="border-radius: 12px"
           src="https://open.spotify.com/embed/album/3MKQjYpaES80tFP7Qo2zH0?utm_source=generator"
-          width="70%"
-          height="355px"
           frameborder="0"
           allowfullscreen=""
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
           loading="lazy"
         ></iframe>
         <iframe
-          class="ter1"
-          style="border-radius: 12px"
           src="https://open.spotify.com/embed/album/48vGyeerQqM7mWU0JzRkAl?utm_source=generator"
-          width="70%"
-          height="355px"
           frameborder="0"
           allowfullscreen=""
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
           loading="lazy"
         ></iframe>
         <iframe
-          class="ter2"
-          style="border-radius: 12px"
           src="https://open.spotify.com/embed/album/6anO6Uh11TivGpTI56aKCH?utm_source=generator"
-          width="70%"
-          height="355px"
           frameborder="0"
           allowfullscreen=""
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
           loading="lazy"
         ></iframe>
         <iframe
-          class="ada"
-          style="border-radius: 12px"
           src="https://open.spotify.com/embed/album/26nUVuonXEdbJTo9PeBYoR?utm_source=generator"
-          width="50%"
-          height="355px"
           frameborder="0"
           allowfullscreen=""
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
