--- a/index.html
+++ b/index.html
@@ -54,7 +54,45 @@
   </head>
   <body class="fondo-principal">
     <header>
-      <nav class="nav">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">MAURO</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="pages/discografia.html"
+                  >DISCOGRAFIA</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="pages/notas.html">NOTAS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="pages/mdd.html">MDD</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="pages/nvt.html">NVT</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+      <!-- <nav class="nav">
         <ul>
           <li><a href="index.html">Inicio</a></li>
 
@@ -66,13 +104,15 @@
 
           <li><a href="pages/nvt.html">NVT</a></li>
         </ul>
-      </nav>
+      </nav> -->
     </header>
     <main>
-      <h1 class="title">Duki</h1>
-      <h2 class="sub1">Esta es la historia de Duki</h2>
-      <section class="hero">
-        <article class="historia">
+      <div class="posteo-texto">
+        <h1 class="title">Duki</h1>
+        <h2 class="sub1">Esta es la historia de Duki</h2>
+        <!-- <section class="hero">
+        </section> -->
+        <article class="posteo-contenido">
           Mauro Ezequiel Lombardo Quiroga o mejor conocido como "Duki" es un
           artista de trap argentino considerado como el mayor referente de este
           genero en el pais. Su familia esta conformada por su madre Sandra
@@ -87,50 +127,50 @@
           oportunidad ya que no sabia si tendria una igual algun dia. En
           Noviembre de 2016 lanzo su primera cancion llamada "No vendo trap"
         </article>
-        <div id="carouselExample" class="carousel slide">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img
-                src="fotosyvideos/rockstar.jpg"
-                class="d-block mx-auto"
-                alt="rockstar"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="fotosyvideos/elegante.jpg"
-                class="d-block mx-auto"
-                alt="facha"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="fotosyvideos/dye.jpg"
-                class="d-block mx-auto"
-                alt="pareja"
-              />
-            </div>
+      </div>
+      <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="fotosyvideos/rockstar.jpg"
+              class="d-block mx-auto"
+              alt="rockstar"
+            />
           </div>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carouselExample"
-            data-bs-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselExample"
-            data-bs-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+          <div class="carousel-item">
+            <img
+              src="fotosyvideos/elegante.jpg"
+              class="d-block mx-auto"
+              alt="facha"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="fotosyvideos/dye.jpg"
+              class="d-block mx-auto"
+              alt="pareja"
+            />
+          </div>
         </div>
-      </section>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExample"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExample"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </main>
     <footer>
       <div><a href="pages/contacto.html" target="_blank">Contacto</a></div>
