--- a/pages/nvt.html
+++ b/pages/nvt.html
@@ -49,7 +49,46 @@
   </head>
   <body class="fondo-principal">
     <header>
-      <nav class="nav">
+      //test
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html">MAURO</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="discografia.html"
+                  >DISCOGRAFIA</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="notas.html">NOTAS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="mdd.html">MDD</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="nvt.html">NVT</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      //test
+      <!-- <nav class="nav">
         <ul>
           <li><a href="../index.html">Inicio</a></li>
 
@@ -61,7 +100,7 @@
 
           <li><a href="nvt.html">NVT</a></li>
         </ul>
-      </nav>
+      </nav> -->
     </header>
     <main>
       <h1 class="title">Duki</h1>
