--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -83,47 +83,38 @@
           </div>
         </div>
       </nav>
-      <!-- <nav class="nav">
-        <ul>
-          <li><a href="../index.html">Inicio</a></li>
-
-          <li><a href="discografia.html">Discografia</a></li>
-
-          <li><a href="notas.html">Notas</a></li>
-
-          <li><a href="mdd.html">MDD</a></li>
-
-          <li><a href="nvt.html">NVT</a></li>
-        </ul>
-      </nav> -->
     </header>
     <main>
-      <h1 class="title">Duki</h1>
-      <h2 class="discos">Discografia</h2>
-      <p>
-        Duki a lo largo de su carrera hizo 6 albumes, todos tienen un estilo
-        parecido menos 2 de los 6 que fueron un cambio rotundo en su carrera.
-        Para los fans de Duki, "Desde el Fin del Mundo" esel mejor album que
-        tiene ya que sus canciones individuales y colaboraciones son muy
-        queridas por la comunidad
-      </p>
-      <p>
-        En mi opinion "Chico Estrella" del album "Desde el Fin del Mundo" es la
-        mejor canción que sacó de todas las que tiene, el momento en el que
-        salió fue en medio de la pandemia de 2020 y revoluciono completamente su
-        estilo, pasó de ser un "rockstar" como se hacia llamar a un rapero que
-        compone y le dedica el tiempo necesario a cada cancion antes de
-        lanzarla.
-      </p>
-      <p>
-        Duki se dio cuenta de la responsabilidad que tenía al ser un cantante
-        con tanta fama, sus canciones llegaban a Europa, Estados Unidos y Asia,
-        y al darse cuenta de eso cambio su forma de trabajo y dejo de lado esa
-        vida oscura en la que estaba metido. El proyecto del album "Desde el Fin
-        del Mundo" fue el primero que el dedicó tanto esfuerzo, tiempo y cariño
-        queriendo hacer las cosas correctamente y dandole un giro de 180° a su
-        mentalidad y carrera.
-      </p>
+      <div class="posteo-texto">
+        <h1 class="title">Duki</h1>
+        <h2 class="discos">Discografia</h2>
+      </div>
+      <div class="posteo-contenido">
+        <p>
+          Duki a lo largo de su carrera hizo 6 albumes, todos tienen un estilo
+          parecido menos 2 de los 6 que fueron un cambio rotundo en su carrera.
+          Para los fans de Duki, "Desde el Fin del Mundo" esel mejor album que
+          tiene ya que sus canciones individuales y colaboraciones son muy
+          queridas por la comunidad
+        </p>
+        <p>
+          En mi opinion "Chico Estrella" del album "Desde el Fin del Mundo" es
+          la mejor canción que sacó de todas las que tiene, el momento en el que
+          salió fue en medio de la pandemia de 2020 y revoluciono completamente
+          su estilo, pasó de ser un "rockstar" como se hacia llamar a un rapero
+          que compone y le dedica el tiempo necesario a cada cancion antes de
+          lanzarla.
+        </p>
+        <p>
+          Duki se dio cuenta de la responsabilidad que tenía al ser un cantante
+          con tanta fama, sus canciones llegaban a Europa, Estados Unidos y
+          Asia, y al darse cuenta de eso cambio su forma de trabajo y dejo de
+          lado esa vida oscura en la que estaba metido. El proyecto del album
+          "Desde el Fin del Mundo" fue el primero que el dedicó tanto esfuerzo,
+          tiempo y cariño queriendo hacer las cosas correctamente y dandole un
+          giro de 180° a su mentalidad y carrera.
+        </p>
+      </div>
       <section class="posteo-media">
         <iframe
           src="https://open.spotify.com/embed/album/1SbMoaKFJWo8u1tb2dAgHt?utm_source=generator"
@@ -176,5 +167,10 @@
       </div>
       <p class="copy">Todos los derechos reservados</p>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
