--- a/pages/mdd.html
+++ b/pages/mdd.html
@@ -67,7 +67,7 @@
                   class="nav-link active"
                   aria-current="page"
                   href="discografia.html"
-                  >DISCOGRAFIAa</a
+                  >DISCOGRAFIA</a
                 >
               </li>
               <li class="nav-item">
@@ -83,44 +83,35 @@
           </div>
         </div>
       </nav>
-      <!-- <nav class="nav">
-        <ul>
-          <li><a href="../index.html">Inicio</a></li>
-
-          <li><a href="discografia.html">Discografia</a></li>
-
-          <li><a href="notas.html">Notas</a></li>
-
-          <li><a href="mdd.html">MDD</a></li>
-
-          <li><a href="nvt.html">NVT</a></li>
-        </ul>
-      </nav> -->
     </header>
     <main>
-      <h1 class="title">Duki</h1>
-      <h2 class="sub2">Modo Diablo</h2>
-      <p>
-        Modo Diablo fue el grupo conformado por Ysy A, Neo Pistea y Duki, eran
-        un grupo de amigos dedicados a la musica que decidieron formar este
-        nombre para su grupo musical. Iban a todos lados juntos, eran hermanos
-        inseparables que compartian canciones, shows, videoclips, etc.
-        Aproximadamente en 2018, este trio de artistas se mudaron a una casa en
-        Villa Crespo, la cual apodaron como "La Mansion". El proyecto de esta
-        casa era tener una casa dedicada unica y exclusivamente a la creacion de
-        musica de toda la escena.En esta casa se han grabado varios videoclips
-        tal como el de "Rockstar" de Duki. Luego de que Modo Diablo abandone la
-        casa, el dueño decidió exponer la ubicacion, Antezana 247, y no alquilar
-        más el lugar y dejarlo como una especie de museo donde los fanes van y
-        dejan una firma
-      </p>
-      <p>
-        Actualmente este grupo esta trabajando cada uno por su cuenta pero su
-        hermandad sigue vigente, la comunidad que consume a la escena del trap
-        extraña que estos 3 referentes se junten a grabar ya que lo único que
-        sabian hacer eran "himnos" para los fanes.
-      </p>
-      <section class="box-item">
+      <div class="posteo-texto">
+        <h1 class="title">Duki</h1>
+        <h2 class="sub2">Modo Diablo</h2>
+      </div>
+      <div class="posteo-contenido">
+        <p>
+          Modo Diablo fue el grupo conformado por Ysy A, Neo Pistea y Duki, eran
+          un grupo de amigos dedicados a la musica que decidieron formar este
+          nombre para su grupo musical. Iban a todos lados juntos, eran hermanos
+          inseparables que compartian canciones, shows, videoclips, etc.
+          Aproximadamente en 2018, este trio de artistas se mudaron a una casa
+          en Villa Crespo, la cual apodaron como "La Mansion". El proyecto de
+          esta casa era tener una casa dedicada unica y exclusivamente a la
+          creacion de musica de toda la escena.En esta casa se han grabado
+          varios videoclips tal como el de "Rockstar" de Duki. Luego de que Modo
+          Diablo abandone la casa, el dueño decidió exponer la ubicacion,
+          Antezana 247, y no alquilar más el lugar y dejarlo como una especie de
+          museo donde los fanes van y dejan una firma
+        </p>
+        <p>
+          Actualmente este grupo esta trabajando cada uno por su cuenta pero su
+          hermandad sigue vigente, la comunidad que consume a la escena del trap
+          extraña que estos 3 referentes se junten a grabar ya que lo único que
+          sabian hacer eran "himnos" para los fanes.
+        </p>
+      </div>
+      <section class="posteo-media">
         <div class="box">
           <img src="../fotosyvideos/A247.jpg" alt="la Mansion" />
         </div>
