--- a/pages/notas.html
+++ b/pages/notas.html
@@ -83,47 +83,35 @@
           </div>
         </div>
       </nav>
-      <!-- <nav class="nav">
-        <ul>
-          <li><a href="../index.html">Inicio</a></li>
-
-          <li><a href="discografia.html">Discografia</a></li>
-
-          <li><a href="notas.html">Notas</a></li>
-
-          <li><a href="mdd.html">MDD</a></li>
-
-          <li><a href="nvt.html">NVT</a></li>
-        </ul>
-      </nav> -->
     </header>
     <main>
-      <h1 class="title">Duki</h1>
-      <h2 class="interwievs">Notas</h2>
-      <p>
-        Duki a lo largo de toda su carrera fue llamado por muchos programas,
-        influencers, etc para dar una nota. Lamentablemente hay gente que abusa
-        de la posibilidad que tienen de estar haciendole una nota a duki y
-        preguntas cosas fuera de lugar o cosas que Mauro quiere mantener en
-        privado ya que el también es un humano como todos. Pero asi como hay
-        perioditas que desaprovechan sus oportunidades, hay gente que aprovecha
-        para preguntar lo que los fanes queremos saber..¿Qué desayuna Duki?¿Cual
-        es la comida favorita de Duki?. A los fanes (y me inlcuyo) les gusta
-        saber que ese ídolo que tienen es un humano nomral como ellos, que vive
-        y no esta todo el dia encerrado en el estudio. A continuación les dejo
-        algunas de las notas que le hicieron a Duki. En todas sus entrevistas
-        busca dar un mensaje para su comunidad, ya sea para dar fuerzas para
-        gente que necesita escichar unas palabras q le den valor para enfrentar
-        esas situaciones que solos no pueden y él te hace darte cuenta que no
-        estas solo, tenes mucha gente al lado que te quiere y no tenes que
-        rendirte nunca en la vida ya que la vida es una y hay que disfrutarla lo
-        máximo posible
-      </p>
-      <section class="notes">
+      <div class="posteo-texto">
+        <h1 class="title">Duki</h1>
+        <h2 class="interwievs">Notas</h2>
+      </div>
+      <div class="posteo-contenido">
+        <p>
+          Duki a lo largo de toda su carrera fue llamado por muchos programas,
+          influencers, etc para dar una nota. Lamentablemente hay gente que
+          abusa de la posibilidad que tienen de estar haciendole una nota a duki
+          y preguntas cosas fuera de lugar o cosas que Mauro quiere mantener en
+          privado ya que el también es un humano como todos. Pero asi como hay
+          perioditas que desaprovechan sus oportunidades, hay gente que
+          aprovecha para preguntar lo que los fanes queremos saber..¿Qué
+          desayuna Duki?¿Cual es la comida favorita de Duki?. A los fanes (y me
+          inlcuyo) les gusta saber que ese ídolo que tienen es un humano nomral
+          como ellos, que vive y no esta todo el dia encerrado en el estudio. A
+          continuación les dejo algunas de las notas que le hicieron a Duki. En
+          todas sus entrevistas busca dar un mensaje para su comunidad, ya sea
+          para dar fuerzas para gente que necesita escichar unas palabras q le
+          den valor para enfrentar esas situaciones que solos no pueden y él te
+          hace darte cuenta que no estas solo, tenes mucha gente al lado que te
+          quiere y no tenes que rendirte nunca en la vida ya que la vida es una
+          y hay que disfrutarla lo máximo posible
+        </p>
+      </div>
+      <section class="posteo-media">
         <iframe
-          class="olga"
-          width="560"
-          height="315"
           src="https://www.youtube.com/embed/1umorEunkfc?si=NXf4xyqxUcLEnJgu"
           title="YouTube video player"
           frameborder="0"
@@ -131,9 +119,6 @@
           allowfullscreen
         ></iframe>
         <iframe
-          class="ibai"
-          width="560"
-          height="315"
           src="https://www.youtube.com/embed/oJCrPfw6o60?si=vDwUALGvB48pDIW_"
           title="YouTube video player"
           frameborder="0"
@@ -141,9 +126,6 @@
           allowfullscreen
         ></iframe>
         <iframe
-          class="grego"
-          width="560"
-          height="315"
           src="https://www.youtube.com/embed/1OFzp9hILog?si=jFpNpO7Qh-UET5SG"
           title="YouTube video player"
           frameborder="0"
@@ -151,9 +133,6 @@
           allowfullscreen
         ></iframe>
         <iframe
-          class="resistencia"
-          width="560"
-          height="315"
           src="https://www.youtube.com/embed/eMndhHlG90U?si=GGmMDxwiVeXgoPnO"
           title="YouTube video player"
           frameborder="0"
@@ -161,13 +140,18 @@
           allowfullscreen
         ></iframe>
         <iframe
-          class="inter"
-          width="560"
-          height="315"
           src="https://www.youtube.com/embed/19M4phBeNZY?si=c5M9IL8DcujqXLRc"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+        <iframe
+          src="https://www.youtube.com/embed/MNJYpX85AEI"
+          title="DUKI en #ParenLaMano"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
           allowfullscreen
         ></iframe>
       </section>
@@ -179,5 +163,10 @@
       </div>
       <p class="copy">Todos los derechos reservados</p>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
