--- a/pages/nvt.html
+++ b/pages/nvt.html
@@ -49,7 +49,6 @@
   </head>
   <body class="fondo-principal">
     <header>
-      //test
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">MAURO</a>
@@ -87,39 +86,27 @@
           </div>
         </div>
       </nav>
-      //test
-      <!-- <nav class="nav">
-        <ul>
-          <li><a href="../index.html">Inicio</a></li>
-
-          <li><a href="discografia.html">Discografia</a></li>
-
-          <li><a href="notas.html">Notas</a></li>
-
-          <li><a href="mdd.html">MDD</a></li>
-
-          <li><a href="nvt.html">NVT</a></li>
-        </ul>
-      </nav> -->
     </header>
     <main>
-      <h1 class="title">Duki</h1>
-      <h2 class="fame">"No Vendo Trap"</h2>
-      <section class="org">
-        <article class="pluh">
-          "No Vendo Trap" fue el primer sencillo que sacó Duki en Noviembre de
-          2016 luego de ganar la competencia "El Quinto Escalon" cuyo premio era
-          grabar una cancion en un estudio. Este fue la oportunidad de su vida,
-          que claramente no desaprovechó y fue de las mejores decisiones que
-          tomo a lo largo de su vida. Gracias a esta canción su fama crecio
-          mucho más a lo largo de todo el pais siendo de los mayores referentes
-          del trap a nivel nacional. Claramente no tiene mucha calidad la
-          canción pero tengamos en cuenta la época, la productora era una
-          emergente con lo cual no tenian fondos para un equipo de alta calidad,
-          un videoclip muy producido, y aun asi es una grancancion que marcó un
-          antes y un después en su carrera musical y en su vida entera, fue el
-          inicio de lo que hoy conocemos como Duki.
-        </article>
+      <div class="posteo-texto">
+        <h1 class="title">Duki</h1>
+        <h2 class="fame">"No Vendo Trap"</h2>
+      </div>
+      <article class="posteo-contenido">
+        "No Vendo Trap" fue el primer sencillo que sacó Duki en Noviembre de
+        2016 luego de ganar la competencia "El Quinto Escalon" cuyo premio era
+        grabar una cancion en un estudio. Este fue la oportunidad de su vida,
+        que claramente no desaprovechó y fue de las mejores decisiones que tomo
+        a lo largo de su vida. Gracias a esta canción su fama crecio mucho más a
+        lo largo de todo el pais siendo de los mayores referentes del trap a
+        nivel nacional. Claramente no tiene mucha calidad la canción pero
+        tengamos en cuenta la época, la productora era una emergente con lo cual
+        no tenian fondos para un equipo de alta calidad, un videoclip muy
+        producido, y aun asi es una grancancion que marcó un antes y un después
+        en su carrera musical y en su vida entera, fue el inicio de lo que hoy
+        conocemos como Duki.
+      </article>
+      <div class="posteo-media">
         <iframe
           class="cancion"
           width="560"
@@ -140,7 +127,7 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen
         ></iframe>
-      </section>
+      </div>
     </main>
     <footer>
       <div><a href="contacto.html" target="_blank">Contacto</a></div>
@@ -149,5 +136,10 @@
       </div>
       <p class="copy">Todos los derechos reservados</p>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
