--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,9 +7,13 @@
     <title>Contacto</title>
   </head>
   <body class="contact">
-    <h1 class="contacto">Contacto</h1>
-    <p class="search">Para un contacto directo conmigo podes buscarme en</p>
-    <div class="search">Instagram: "amlgprogramacion"</div>
-    <div class="search">O enviame un mail a "amlgprogramacion@gmail.com"</div>
+    <div class="posteo-texto">
+      <h1>Contacto</h1>
+    </div>
+    <div class="posteo-contenido">
+      <p>Para un contacto directo conmigo podes buscarme en</p>
+      <div>Instagram: "amlgprogramacion"</div>
+      <div>O enviame un mail a "amlgprogramacion@gmail.com"</div>
+    </div>
   </body>
 </html>
