--- a/pages/desarrollador.html
+++ b/pages/desarrollador.html
@@ -8,7 +8,7 @@
   </head>
   <body class="designer">
     <h1 class="quien">¿Quien soy?</h1>
-    <p class="al">
+    <p class="posteo-contenido">
       Te cuento quien soy, me llamo Agustin Lumbardini, actualmente tengo 17
       años y me estoy adentrando en el mundo de la programación. Durante 11 años
       fui jugador de basket para el Club Social Beccar ubicado en Beccar, Buenos
